--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,23 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.40"
+
+ark-ff = { version = "^0.3.0", default-features = false }
+ark-ec = { version = "^0.3.0", default-features = false }
+ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
+ark-bls12-381 = { version = "^0.3.0", default-features = false }
+ark-std = { version = "^0.3.0", default-features = false }
+ark-relations = { version = "^0.3.0", default-features = false }
+
+ark-r1cs-std = { version = "^0.3.0", default-features = false }
+ark-snark = { version = "^0.3.0", default-features = false }
+
+ark-serialize = { version = "^0.3.0", default-features = false }
+ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [
+	"r1cs",
+] }
+
+tracing = { version = "0.1", default-features = false, features = [
+	"attributes",
+] }
+tracing-subscriber = { version = "0.2" }
