--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,22 +6,38 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.40"
 
-ark-ff = { version = "^0.3.0", default-features = false }
-ark-ec = { version = "^0.3.0", default-features = false }
-ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
-ark-bls12-381 = { version = "^0.3.0", default-features = false }
 ark-std = { version = "^0.3.0", default-features = false }
-ark-relations = { version = "^0.3.0", default-features = false }
-
 ark-r1cs-std = { version = "^0.3.0", default-features = false }
 ark-snark = { version = "^0.3.0", default-features = false }
-
+ark-relations = { version = "^0.3.0", default-features = false }
 ark-serialize = { version = "^0.3.0", default-features = false }
 ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [
 	"r1cs",
 ] }
 
+ark-groth16 = "^0.3.0"
+ark-marlin = "^0.3.0"
+ark-gm17 = "^0.3.0"
+
+ark-ff = { version = "^0.3.0", default-features = false }
+ark-ec = { version = "^0.3.0", default-features = false }
+ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
+ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [
+	"curve",
+] }
+
+
 tracing = { version = "0.1", default-features = false, features = [
 	"attributes",
 ] }
 tracing-subscriber = { version = "0.2" }
+ark-bn254 = { version = "0.5.0", features = ["r1cs"] }
+clap = { version = "4.5.31", features = ["cargo", "derive"] }
+bincode = "1.3.3"
+serde = { version = "1.0.218", features = ["derive"] }
+dialoguer = "0.11.0"
+hex = "0.4.3"
+
+[[bin]]
+name = "zkmember"
+path = "src/main.rs"
