--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ bincode = "1.3.3"
 serde = { version = "1.0.218", features = ["derive"] }
 dialoguer = "0.11.0"
 hex = "0.4.3"
+serde_json = "1.0.140"
 
 [[bin]]
 name = "zkmember"
