--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,13 @@ bincode = "1.3.3"
 serde = { version = "1.0.218", features = ["derive"] }
 dialoguer = "0.11.0"
 hex = "0.4.3"
-serde_json = "1.0.140"
+serde_json = { version = "1.0.140", optional = true }
+
+[features]
+default = ["serde"]
+serde = ["serde_json", "derive"]
+derive = ["serde_json"]
+
 
 [[bin]]
 name = "zkmember"
