--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,13 +42,18 @@ serde = { version = "1.0.218", features = ["derive"] }
 dialoguer = "0.11.0"
 hex = "0.4.3"
 serde_json = { version = "1.0.140", optional = true }
+rand = "0.9.0"
 
 [features]
-default = ["serde", "pedersen761"]
+default = ["serde", "pedersen381"]
 serde = ["serde_json"]
 pedersen381 = []
 pedersen761 = []
+benchmark = ["pedersen381", "pedersen761"]
 
 [[bin]]
 name = "zkmember"
 path = "src/main.rs"
+
+[dev-dependencies]
+criterion = "0.5.1"
