chore: add benchmark for Pedersen hash and remove old commitment types benchmark

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,8 @@ path = "src/main.rs"
 
 [dev-dependencies]
 criterion = "0.5.1"
+
+[[bench]]
+name = "pedersen"
+harness = false
+path = "benches/pedersen.rs"
