--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ dialoguer = "0.11.0"
 hex = "0.4.3"
 serde_json = { version = "1.0.140", optional = true }
 rand = "0.9.0"
+ark-bls12-377 = { version = "0.5.0", features = ["r1cs"] }
+ark-poly-commit = { version = "0.5.0", features = ["ark-r1cs-std", "r1cs"] }
+ark-poly = "0.5.0"
+blake2 = { version = "0.9", default-features = false }
 
 [features]
 default = ["serde", "pedersen381"]
