--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tracing = { version = "0.1", default-features = false, features = [
 	"attributes",
 ] }
 tracing-subscriber = { version = "0.2" }
-ark-bn254 = { version = "0.5.0", features = ["r1cs"] }
+ark-bn254 = { version = "^0.3" }
 clap = { version = "4.5.31", features = ["cargo", "derive"] }
 bincode = "1.3.3"
 serde = { version = "1.0.218", features = ["derive"] }
@@ -44,9 +44,9 @@ dialoguer = "0.11.0"
 hex = "0.4.3"
 serde_json = { version = "1.0.140", optional = true }
 rand = "0.9.0"
-ark-bls12-377 = { version = "0.5.0", features = ["r1cs"] }
-ark-poly-commit = { version = "0.5.0", features = ["ark-r1cs-std", "r1cs"] }
-ark-poly = "0.5.0"
+ark-bls12-377 = { version = "^0.3", features = ["r1cs"] }
+ark-poly-commit = { version = "^0.3", features = ["ark-r1cs-std", "r1cs"] }
+ark-poly = "^0.3"
 blake2 = { version = "0.9", default-features = false }
 
 [features]
